doc: add both stretch factors to the list of attached properties

The horizontalStretchFactor and verticalStretchFactor properties were
both added in 6.5. Not only did we forget to mark them with a
\since Qt 6.5, but we also forgot to add them to the list of attached
properties that is mentioned on the RowLayout and ColumnLayout doc pages.

Task-number: QTBUG-113230
Pick-to: 6.5 6.5.1
Change-Id: I8537fe5c9b5aa1389a8bfaf4e1abed3a1f0a34d5
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
Reviewed-by: Carl-Lucien Armand Schwan <carl.schwan@kdab.com>